fix: update projects

--- a/.gitignore
+++ b/.gitignore
@@ -183,3 +183,6 @@ Plugins/**/Intermediate/*
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm+all,unrealengine
 /DatasetGeneration/Neural Networks/Data
+*.uasset
+/Unreal Engine Object Generator/Saved/Crashes
+*.ubulk
